@@ -79,10 +79,11 @@ input and write the converted data to its standard output."
 
 ;;;###autoload
 (defconst binhex-begin-line
-  "^:...............................................................$")
+  "^:...............................................................$"
+  "Regular expression matching the start of a BinHex encoded region.")
 (defconst binhex-body-line
   "^[^:]...............................................................$")
-(defconst binhex-end-line ":$")
+(defconst binhex-end-line ":$")		; unused
 
 (defvar binhex-temporary-file-directory
   (cond ((fboundp 'temp-directory) (temp-directory))
